--- a/app/src/main/res/layout/wallpaper_item.xml
+++ b/app/src/main/res/layout/wallpaper_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.pmatuki.wowpapers.view.WallpaperItemView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.pmatuki.wowpapers.view.list.WallpaperItemView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="200dp"
@@ -32,4 +32,4 @@
         android:layout_marginEnd="@dimen/text_margin_large"
         android:layout_marginBottom="@dimen/text_margin_large"
         android:textSize="24sp" />
-</com.pmatuki.wowpapers.view.WallpaperItemView>
+</com.pmatuki.wowpapers.view.list.WallpaperItemView>
