--- a/app/src/main/res/layout/wallpaper_list.xml
+++ b/app/src/main/res/layout/wallpaper_list.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.pmatuki.wowpapers.view.WallpaperListView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.pmatuki.wowpapers.view.list.WallpaperListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.WallpaperListView">
+    tools:context=".view.list.WallpaperListView">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
@@ -14,4 +14,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</com.pmatuki.wowpapers.view.WallpaperListView>
+</com.pmatuki.wowpapers.view.list.WallpaperListView>
