--- a/app/src/main/res/layout/wallpaper_list.xml
+++ b/app/src/main/res/layout/wallpaper_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.pmatuki.wowpapers.view.list.WallpaperListView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.pmatuki.wowpapers.view.list.WallpaperListView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,4 +15,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 </com.pmatuki.wowpapers.view.list.WallpaperListView>
